seahorse 0.7.2
--------------

	* GConf notification for preferences and ui settings
	* More gnome preferences
	* More listing improvements and optimizations for large key rings
	* Key properties now a property window

seahorse 0.7.1
--------------
	* Changed File menu to Key menu
	* Added context menu for keys
	* Added buttons/menu items for possible, but not-yet-implemented features
	* Sign an entire key
	* Add a revoker to a key
	* Bug fix when setting Ascii Armor Preferences
	* Removed File Manager, replaced with file operations in Tools
	* Key pairs initially listed first
	* Performance improvements with large key rings, especially in loading preferences
	* Progress display at startup for listing of keys
	* Can delete subkeys of non key-pairs
	* General interface cleanups

seahorse 0.7.0
--------------
	* Add a user ID
	* Add a subkey
	* Delete a subkey
	* Change a subkey's expiration
	* Revoke a subkey
	* Properties shows subkey status (good, revoked, expired)
	* Key Manager shows user IDs instead of subkeys
	* Sort keys by user ID & validity in Key Manager and Recipients
	* Subkeys hidden by default in properties

seahorse 0.6.2
--------------
	* Bug fix in GPGME check
	* Supported languages: cs, de, es, hu, ja, nl, no, sv, tr
	* Interface fixups so buttons are not sensitive when they cannot be used

seahorse 0.6.1
--------------
	* Correctly check for GPGME 0.3.14 and GnuPG 1.2 during build
	* More and updated translations
	* Key manager updates all keys when changed
	* Preferences loads faster
	* More HIG compliant windows & dialogs
	* Failure to install schemas does not stop installation
	* Better about dialog: shows version & lists translators

seahorse 0.6.0
--------------
	* Key properties cleanups
	* Less passphrase crashes
	* Only one window of each type or of each type per key allowed open
	* Less memory leaks
	* Preferences is slower to load, but keeps track of default signer better
	* Updated help manual with figures
	* More translations