@@ -56,8 +56,9 @@ Also check bugzilla for other tasks.
 [ ] Drag key out = export (Resp: Jacob)
 [ ] Drag between recipients (Resp: Jacob)
 [?] Multiple key selection (Resp: Jacob)
-[ ] Context gconf listener (Resp: Jacob)
+[X] Context gconf listener (Resp: Jacob)
 [ ] Error check gconf & gnome help (Resp: Jacob)
+[ ] More refined key changes so that key-properties doesn't have to delete notebook pages
 
 1.0 (Focus: Gnome integration & usability)
 --------------------------------------------
