@@ -1,4 +1,10 @@
-2003-02-07  Jacob Perkins  <jap1@users.sourceforge.net>
+2003-03-08  Jacob Perkins  <jap1@users.sourceforge.net>
+
+	* seahorse-key-properties: Bug fix when changing key, added tooltips
+	* seahorse-key: Added ::get_fingerprint and ::get_id
+	* seahorse-context: Updated to use seahorse_key_get_id
+
+2003-03-07  Jacob Perkins  <jap1@users.sourceforge.net>
 
 	* seahorse-key-manager: Refined startup
 	* seahorse-widget:
@@ -11,11 +17,11 @@
 	signatures part of primary key
 	* seahorse-context: ::finalize doesn't list keys if are none
 
-2003-02-06  Jacob Perkins  <jap1@users.sourceforge.net>
+2003-03-06  Jacob Perkins  <jap1@users.sourceforge.net>
 
 	* seahorse-widget: Removed component option/property
 
-2003-02-05  Jacob Perkins  <jap1@users.sourceforge.net>
+2003-03-05  Jacob Perkins  <jap1@users.sourceforge.net>
 
 	* seahorse-context: Separated key-pair listing from non-pairs,
 	removed some code duplication, changed signer methods to
@@ -28,11 +34,11 @@
 	* data/seahorse.schemas.in: Changed default_key_id to default_key,
 	updated description
 
-2003-02-04  Jacob Perkins  <jap1@users.sourceforge.net>
+2003-03-04  Jacob Perkins  <jap1@users.sourceforge.net>
 
 	* seahorse-widget: Removed unnecessary callbacks
 
-2003-02-03  Jacob Perkins  <jap1@users.sourceforge.net>
+2003-03-03  Jacob Perkins  <jap1@users.sourceforge.net>
 
 	* seahorse-context: Added gconf notification for preferences
 	* data/seahorse.schemas.in: Added toolbar style & visibility and
@@ -43,7 +49,7 @@
 
 	* Released 0.7.1
 
-2003-02-02  Jacob Perkins  <jap1@users.sourceforge.net>
+2003-03-02  Jacob Perkins  <jap1@users.sourceforge.net>
 
 	* seahorse-key-manager: Added missing accelerators for menus,
 	context menu pops up when press Shift-F10,
