@@ -5,6 +5,7 @@ seahorse 0.7.2
 	* More gnome preferences
 	* More listing improvements and optimizations for large key rings
 	* Key properties now a property window
+	* Owner trust values are restricted based on key type
 
 seahorse 0.7.1
 --------------
